--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'Привет!'",
+    "test": "echo 'еееее работает!'",
     "check": "prettier --check ./**/*.{html,css,js}",
     "format": "prettier --write ./**/*.{html,css,js}",
     "lint": "stylelint **/*.css",
